🚨 테스트 후 폴더 삭제!! new FileUtil(USER).cleanup();  + UserService 테스트 코드 작성